--- a/src/MSetExplorer/XPoc/RValueParsing/MapCoordsEdTestWindow.xaml
+++ b/src/MSetExplorer/XPoc/RValueParsing/MapCoordsEdTestWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="MSetExplorer.MapCoordsEdTestWindow"
+﻿<Window x:Class="MSetExplorer.XPoc.MapCoordsEdTestWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MSetExplorer"
+        xmlns:local="clr-namespace:MSetExplorer.XPoc"
         mc:Ignorable="d"
         Title="MapCoordsEditorWindow" Height="300" Width="800">
     <Grid>
