--- a/src/MSetExplorer/AppNav/AppNavWindow.xaml
+++ b/src/MSetExplorer/AppNav/AppNavWindow.xaml
@@ -14,7 +14,9 @@
             
             <Button Width="100" Height="25" Click="LeaveButton_Click" Margin="0,10" >Leave</Button>
 
-            <Button Width="200" Click="RemoveMapSectionsButton_Click" Margin="0,120">Remove Recent MapSections</Button>
+            <Button Width="100" Height="25" Click="SampleTestButton_Click" Margin="0,10" >Sample Test</Button>
+            
+            <Button Width="200" Click="RemoveMapSectionsButton_Click" Margin="0,90">Remove Recent MapSections</Button>
 
         </StackPanel>
     </Grid>
