--- a/src/MSetExplorer/XPoc/Sampling/XSamplingEditorWindow.xaml
+++ b/src/MSetExplorer/XPoc/Sampling/XSamplingEditorWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer.XPoc"
         mc:Ignorable="d"
-        Title="XSamplingEditorWindow" Height="300" Width="1000">
+        Title="XSamplingEditorWindow" Height="360" Width="1000">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -18,8 +18,6 @@
         <Grid Grid.Row="0" Margin="5" x:Name="grdCoords1">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
@@ -48,64 +46,48 @@
 
             <!-- Width -->
             <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="0,1">
-                <TextBlock Width="80" Margin="15,3,3,3" FontSize="14" Text="Width:" />
+                <TextBlock Width="50" Margin="15,3,3,3" FontSize="14" Text="Width:" />
                 <TextBox x:Name="txtWidth" Width="100" Margin="3" VerticalAlignment="Center" Text="{Binding Width, Mode=OneWay}"/>
 
-                <TextBlock Width="60" Margin="5,3" FontSize="14" Text="Precision:" />
-                <!--<TextBox x:Name="txtPrecisionX" Width="24" Margin="3" VerticalAlignment="Center" Text="{Binding PrecisionX}"/>-->
-                <TextBox x:Name="txtPrecisionX" Width="24" Margin="3" VerticalAlignment="Center" />
+                <TextBlock Width="60" Margin="5,3" FontSize="14" Text="Exponent:" />
+                <TextBox x:Name="txtExponent" Width="40" Margin="3" VerticalAlignment="Center" Text="{Binding Exponent}"/>
             </StackPanel>
 
             <!-- Height -->
             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="0,1,0,10">
-                <TextBlock Width="80" Margin="15,3,3,3" FontSize="14" Text="Height:" />
+                <TextBlock Width="50" Margin="15,3,3,3" FontSize="14" Text="Height:" />
                 <TextBox x:Name="txtHeight" Width="100" Margin="3" VerticalAlignment="Center" Text="{Binding Height, Mode=OneWay}"/>
 
                 <TextBlock Width="60" Margin="5,3" FontSize="14" Text="Precision:" />
-                <!--<TextBox x:Name="txtPrecisionY" Width="24" Margin="3" VerticalAlignment="Center" Text="{Binding PrecisionY}"/>-->
-                <TextBox x:Name="txtPrecisionY" Width="24" Margin="3" VerticalAlignment="Center"/>
-            </StackPanel>
-
-            <!-- COLUMN 2-->
-
-            <!-- Sample Point Delta -->
-            <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" Margin="0,1" x:Name="stkPanSamplePointDelta">
-                <TextBlock Width="45" Margin="15,3,3,3" FontSize="14" Text="Spd:" />
-                <TextBox x:Name="txtSamplePointDelta" Width="180" Margin="3" VerticalAlignment="Center" Text="{Binding SamplePointDelta}"/>
-
-                <TextBlock Width="25" Margin="5,3" FontSize="14" Text="Exp:" />
-                <TextBox x:Name="txtSamplePointDeltaExp" Width="30" Margin="3" VerticalAlignment="Center" Text="{Binding SamplePointDeltaExp}"/>
-            </StackPanel>
-
-            <!-- Zoom -->
-            <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" Margin="0,1" x:Name="stkPanZoom">
-                <TextBlock Width="45" Margin="15,3,3,3" FontSize="14" Text="Zoom:" />
-                <TextBox x:Name="txtZoom" Width="80" Margin="3" VerticalAlignment="Center" Text="{Binding Zoom}"/>
-
+                <TextBox x:Name="txtPrecision" Width="40" Margin="3" VerticalAlignment="Center" Text="{Binding Precision}"/>
             </StackPanel>
 
         </Grid>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="100,10">
+        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="0.75" Margin="5">
+            <Grid>
 
-            <TextBlock Width="45" Margin="3" FontSize="14" Text="Width:" />
-            <TextBox x:Name="txtCanvasWidth" Width="60" Margin="3" VerticalAlignment="Center" Text="{Binding CanvasWidth}"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-            <TextBlock Width="45" Margin="3" FontSize="14" Text="Height:" />
-            <TextBox x:Name="txtCanvasHeight" Width="60" Margin="3" VerticalAlignment="Center" Text="{Binding CanvasHeight}"/>
+                <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,10">
+                    <TextBlock Width="45" Margin="3" FontSize="14" Text="Width:" />
+                    <TextBox x:Name="txtCanvasWidth" Width="60" Margin="3" VerticalAlignment="Center" Text="{Binding ScreenWidth}"/>
 
-            <Button Width="100" Margin="100,3,3,3">Go</Button>
+                    <TextBlock Width="45" Margin="3" FontSize="14" Text="Height:" />
+                    <TextBox x:Name="txtCanvasHeight" Width="60" Margin="3" VerticalAlignment="Center" Text="{Binding ScreenHeight}"/>
+                </StackPanel>
 
-            <Slider x:Name="sldrWidth" Width="400" TickFrequency="200" IsSnapToTickEnabled="True" ValueChanged="sldrWidth_ValueChanged"></Slider>
-            
-            
-        </StackPanel>
+                <Slider Grid.Row="1" x:Name="sldrWidth" HorizontalAlignment="Left" Margin="5" Width="980" Height="50" IsSnapToTickEnabled="True"></Slider>
+
+            </Grid>
+        </Border>
         
         <Grid Grid.Row="2" Margin="5" x:Name="grdCoords2">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
@@ -134,29 +116,27 @@
 
             <!-- Width -->
             <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="0,1">
-                <TextBlock Width="80" Margin="15,3,3,3" FontSize="14" Text="Width:" />
+                <TextBlock Width="50" Margin="15,3,3,3" FontSize="14" Text="Width:" />
                 <TextBox x:Name="txtNWidth" Width="100" Margin="3" VerticalAlignment="Center" Text="{Binding NewWidth, Mode=OneWay}"/>
 
-                <TextBlock Width="60" Margin="5,3" FontSize="14" Text="Precision:" />
-                <!--<TextBox x:Name="txtNPrecisionX" Width="24" Margin="3" VerticalAlignment="Center" Text="{Binding PrecisionX}"/>-->
-                <TextBox x:Name="txtNPrecisionX" Width="24" Margin="3" VerticalAlignment="Center"/>
+                <TextBlock Width="60" Margin="5,3" FontSize="14" Text="Exponent:" />
+                <TextBox x:Name="txtNExponent" Width="40" Margin="3" VerticalAlignment="Center" Text="{Binding NewExponent}"/>
             </StackPanel>
 
             <!-- Height -->
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="0,1,0,10">
-                <TextBlock Width="80" Margin="15,3,3,3" FontSize="14" Text="Height:" />
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="0,1">
+                <TextBlock Width="50" Margin="15,3,3,3" FontSize="14" Text="Height:" />
                 <TextBox x:Name="txtNHeight" Width="100" Margin="3" VerticalAlignment="Center" Text="{Binding NewHeight, Mode=OneWay}"/>
 
                 <TextBlock Width="60" Margin="5,3" FontSize="14" Text="Precision:" />
-                <!--<TextBox x:Name="txtNPrecisionY" Width="24" Margin="3" VerticalAlignment="Center" Text="{Binding PrecisionY}"/>-->
-                <TextBox x:Name="txtNPrecisionY" Width="24" Margin="3" VerticalAlignment="Center"/>
+                <TextBox x:Name="txtNPrecision" Width="40" Margin="3" VerticalAlignment="Center" Text="{Binding NewPrecision}"/>
             </StackPanel>
 
             <!-- COLUMN 2-->
 
             <!-- Sample Point Delta -->
             <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" Margin="0,1" x:Name="stkNPanSamplePointDelta">
-                <TextBlock Width="45" Margin="15,3,3,3" FontSize="14" Text="Spd:" />
+                <TextBlock Width="40" Margin="15,3,3,3" FontSize="14" Text="Spd:" />
                 <TextBox x:Name="txtNSamplePointDelta" Width="180" Margin="3" VerticalAlignment="Center" Text="{Binding NewSamplePointDelta}"/>
 
                 <TextBlock Width="25" Margin="5,3" FontSize="14" Text="Exp:" />
@@ -165,9 +145,11 @@
 
             <!-- Zoom -->
             <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" Margin="0,1" x:Name="stkNPanZoom">
-                <TextBlock Width="45" Margin="15,3,3,3" FontSize="14" Text="Zoom:" />
-                <TextBox x:Name="txtNZoom" Width="80" Margin="3" VerticalAlignment="Center" Text="{Binding NewZoom}"/>
+                <TextBlock Width="40" Margin="15,3,3,3" FontSize="14" Text="Diff:" />
+                <TextBox x:Name="txtDummy1" Width="80" Margin="3" VerticalAlignment="Center" Text="{Binding MapWidthDiff}"/>
 
+                <TextBlock Width="40" Margin="5,3" FontSize="14" Text="Pixels:" />
+                <TextBox x:Name="txtDummy2" Width="80" Margin="3" VerticalAlignment="Center" Text="{Binding ScreenWidthDiff}"/>
             </StackPanel>
 
         </Grid>
@@ -175,7 +157,7 @@
         <Border Grid.Row="3" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button Name="btnClose" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="CloseButton_Click" IsCancel="True">_Cancel</Button>
+                <Button Name="btnClose" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="CloseButton_Click" IsCancel="True">_Close</Button>
             </StackPanel>
 
         </Border>
